# open-synthetic-embeddings

./: MANIFEST.in  README.md  pyproject.toml  setup.py
ose/: __init__.py  collect.py  generate.py  modeling.py  postprocessing.py  sampling.py
ose/configs/bitext/: bitext_collect.yaml  bitext_generation.yaml
ose/configs/long_long/: long_long_brainstorm.yaml  long_long_brainstorm_collect.yaml  long_long_collect.yaml  long_long_generation.yaml  long_long_hard_negatives.yaml
ose/configs/long_short/: long_short_brainstorm.yaml  long_short_brainstorm_collect.yaml  long_short_collect.yaml  long_short_generation.yaml
ose/configs/short_long/: short_long_brainstorm.yaml  short_long_brainstorm_collect.yaml  short_long_collect.yaml  short_long_generation.yaml  short_long_hard_negatives.yaml
ose/configs/short_short/: short_short_brainstorm.yaml  short_short_brainstorm_collect.yaml  short_short_collect.yaml  short_short_generation.yaml  short_short_hard_negatives.yaml
ose/configs/sts/: sts_collect.yaml  sts_generation.yaml
ose/schema/: bitext.json  long_long.json  long_long_brainstorm.json  long_short.json  long_short_brainstorm.json  short_long.json  short_long_brainstorm.json  short_short.json  short_short_brainstorm.json  sts.json
ose/scripts/: run_all.sh  run_bitext.sh  run_long_long.sh  run_long_short.sh  run_short_long.sh  run_short_short.sh  run_sts.sh
